<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:background="@color/tampilan"
            app:layout_constraintBaseline_toBaselineOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="PENDAFTARAN"
                android:layout_marginTop="50dp"
                android:textAlignment="center"
                android:textColor="@color/judul"
                android:textSize="35sp"
                android:textStyle="bold|italic"
                />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="165dp"
                        android:layout_height="51dp"

                        android:ems="10"
                        android:hint="@string/NamaDepan"
                        android:inputType="textPersonName"
                        />
                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="20dp"
                        android:layout_height="48dp"
                        android:ems="7"
                        android:hint="@string/NamaBelakang"
                        android:inputType="textPersonName" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/editText3"
                        android:layout_width="165dp"
                        android:layout_height="51dp"
                        android:ems="10"
                        android:hint="@string/TempatLahir"
                        android:inputType="textPersonName" />
                    <EditText
                        android:id="@+id/editText4"
                        android:layout_width="200dp"
                        android:layout_height="48dp"
                        android:ems="10"
                        android:hint="@string/TanggalLahir"
                        android:inputType="textPersonName" />
                </TableRow>

            </TableLayout>


            <EditText
                android:id="@+id/editText5"
                android:layout_width="357dp"
                android:layout_height="51dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/Alamat"
                android:inputType="textPersonName"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/JenisKelamin" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radioButton1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Lakilaki" />
                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        android:text="@string/Perempuan" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Agama" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Islam" />
                    <RadioButton
                        android:id="@+id/radioButton4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Kristen"
                        android:layout_marginLeft="120dp"/>
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radioButton5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Katolik" />
                    <RadioButton
                        android:id="@+id/radioButton6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Hindu"
                        android:layout_marginLeft="112dp"/>
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radioButton7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Budha" />
                    <RadioButton
                        android:id="@+id/radioButton8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Konghucu"
                        android:layout_marginLeft="116dp"/>
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radioButton9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/AliranKepercayaan" />
                </TableRow>
            </TableLayout>

            <EditText
                android:id="@+id/editText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/Telepon"
                android:inputType="textPersonName"
                />

            <EditText
                android:id="@+id/editText7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/Email"
                android:inputType="textPersonName"
                />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/editText9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/MasukkanPassword"
                android:inputType="textPersonName"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <Button
                            android:id="@+id/bttnKembali"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btnKembali"
                            android:background="@color/btn"
                            android:layout_marginBottom="20dp"
                            android:layout_marginLeft="40dp"/>
                        <Button
                            android:id="@+id/btnDaftar"
                            android:text="@string/btnDaftar"
                            android:layout_width="150dp"
                            android:layout_height="49dp"
                            android:layout_gravity="end"
                            android:layout_marginBottom="20dp"
                            android:layout_marginLeft="25dp"
                            android:background="@color/btn">
                        </Button>
                    </TableRow>
                </TableLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>